# textra-ja-to-en-mcp

./: .env.example  .gitignore  LICENSE  README.md  config.py  devbox.json  pyproject.toml  server.py  textra_client.py
tests/: test_config.py  test_initial.py  test_server.py  test_textra_client.py
